--- a/tests/unit/combo/filtering/tests.html
+++ b/tests/unit/combo/filtering/tests.html
@@ -87,6 +87,7 @@
 
     <script>
         $(function() {
+		$.fx.off = true;
             var testId_1 = 'Generate expressions from texts for filtering',
                 testId_2 = 'Filtering by texts',
                 testId_3 = 'Set default filtering type',
