--- a/tests/unit/combo/rendering/tests.html
+++ b/tests/unit/combo/rendering/tests.html
@@ -83,6 +83,7 @@
 
     <script>
         $(function() {
+		$.fx.off = true;
             var testId_1 = 'igCombo existence',
 				testId_2 = 'Div rendering',
 				testId_3 = 'Span rendering',
@@ -101,7 +102,7 @@
                 var curClass, i,
 					clasesLen = classes ? classes.length : 0,
 					attrLen = attributes ? attributes.length : 0,
-					elOffset = $elem.offset();
+					elOffset = $elem.igOffset();
 
                 strictEqual($elem.length, 1, elName + ' was not rendered');
                 ok($elem.is(elType), elName + ' should be div element');
@@ -156,9 +157,9 @@
 					border = 1,
 					comboWrapperExpWidth = comboExpWidth = width,
 					comboWrapperExpHeight = comboExpHeight = height,
-					comboWrapperExpPosTop = comboExpPosTop = $parent.offset().top,
-					comboWrapperExpPosLeft = comboExpPosLeft = $parent.offset().left,
-					comboOffset = $comboWrapper.offset(),
+					comboWrapperExpPosTop = comboExpPosTop = $parent.igOffset().top,
+					comboWrapperExpPosLeft = comboExpPosLeft = $parent.igOffset().left,
+					comboOffset = $comboWrapper.igOffset(),
 					ddIconExpWidth = 16,
 					ddIconExpHeight = 16,
 					ddBtnPadding = 5,
@@ -166,7 +167,7 @@
 					ddBtnExpHeight = comboExpHeight - 2 * border,
 					ddBtnExpPosTop = comboWrapperExpPosTop + border,
 					ddBtnExpPosLeft = comboExpWidth + comboOffset.left - border - ddBtnExpWidth,
-					ddIconExpPosTop = (ddBtnExpHeight - ddIconExpHeight) / 2 + $ddBtn.offset().top,
+					ddIconExpPosTop = (ddBtnExpHeight - ddIconExpHeight) / 2 + $ddBtn.igOffset().top,
 					ddIconExpPosLeft = ddBtnExpPosLeft + border + ddBtnPadding,
 					clearIconExpWidth = 16,
 					clearIconExpHeight = 16,
@@ -174,7 +175,7 @@
 					clearBtnExpHeight = comboExpHeight - 2 * border,
 					clearBtnExpPosTop = comboWrapperExpPosTop + border,
 					clearBtnExpPosLeft = ddBtnExpPosLeft - clearBtnExpWidth,
-					clearIconExpPosTop = (clearBtnExpHeight - clearIconExpHeight) / 2 + $clearBtn.offset().top,
+					clearIconExpPosTop = (clearBtnExpHeight - clearIconExpHeight) / 2 + $clearBtn.igOffset().top,
 					clearIconExpPosLeft = clearBtnExpPosLeft,
 					textFieldContExpWidth = comboExpWidth - 2 * border - ddBtnExpWidth,
 					textFieldContExpHeight = comboExpHeight - 2 * border,
