--- a/tests/unit/editors/percentEditor/tests.html
+++ b/tests/unit/editors/percentEditor/tests.html
@@ -33,6 +33,7 @@
 	<script type="text/javascript">
 	/*global window, setTimeout, $, startTesting, QUnit, module, test, ok, equals*/
 		$(document).ready(function () {
+		$.fx.off = true;
 			var util = $.ig.TestUtil;
 			// Create a editors
 			function loadTestbeds() {
