--- a/tests/unit/util/tests.html
+++ b/tests/unit/util/tests.html
@@ -60,15 +60,15 @@
 
 			//check getRelativeOffset with relative positioning of the parent
 			var relOffset = $.ig.util.getRelativeOffset($("#span1"));
-			ok($("#span1").parent().offset().left - $("#span1").parent().scrollLeft() === relOffset.left && $("#span1").parent().offset().top - $("#span1").parent().scrollTop() === relOffset.top, "The element offset should be correct.");
+			ok($("#span1").parent().igOffset().left - $("#span1").parent().scrollLeft() === relOffset.left && $("#span1").parent().igOffset().top - $("#span1").parent().scrollTop() === relOffset.top, "The element offset should be correct.");
 			
 			//check getRelativeOffset with absolute positioning of the parent
 			relOffset = $.ig.util.getRelativeOffset($("#table1"));
-			ok($("#table1").parent().offset().left - $("#table1").parent().scrollLeft() === relOffset.left && $("#table1").parent().offset().top - $("#table1").parent().scrollTop() === relOffset.top, "The element offset should be correct.");
+			ok($("#table1").parent().igOffset().left - $("#table1").parent().scrollLeft() === relOffset.left && $("#table1").parent().igOffset().top - $("#table1").parent().scrollTop() === relOffset.top, "The element offset should be correct.");
 			
 			//check getRelativeOffset with static positioning of the parent
 			relOffset = $.ig.util.getRelativeOffset($("#span2"));
-			ok($("#span2").parent().parent().offset().left - $("#span2").parent().parent().scrollLeft() === relOffset.left && $("#span2").parent().parent().offset().top - $("#span2").parent().parent().scrollTop() === relOffset.top, "The element offset should be correct.");
+			ok($("#span2").parent().parent().igOffset().left - $("#span2").parent().parent().scrollLeft() === relOffset.left && $("#span2").parent().parent().igOffset().top - $("#span2").parent().parent().scrollTop() === relOffset.top, "The element offset should be correct.");
 		});
 
 		test("Test defEnum", function () {
