--- a/tests/unit/editors/numericEditor/tests.html
+++ b/tests/unit/editors/numericEditor/tests.html
@@ -34,6 +34,7 @@
 	var util = $.ig.TestUtil;
 	/*global window, setTimeout, $, startTesting, QUnit, module, test, ok, equals*/
 	$(document).ready(function () {
+	$.fx.off = true;
 		// Create a editors
 		function loadTestbeds() {
 			$(function () {
@@ -1303,7 +1304,10 @@
 				buttonType: "dropdown, clear",
 				value: 2,
 				// remove animation to avoid waiting, show() with effect ignores 0
-				dropDownAnimationDuration: -1
+				dropDownAnimationDuration: -1,
+				  validatorOptions : {
+				    notificationOptions: {animationDuration: 0 }
+				  }
 			});
 			equal($editor.igNumericEditor("getSelectedListItem").text(), 2, "Selected item (API) not correct on initialization");
 			equal($editor.igNumericEditor("selectedListIndex"), 2, "Selected index (API) not correct on initialization");
@@ -1441,13 +1445,17 @@
 				isLimitedToListValues: true,
 				buttonType: "dropdown, spin, clear",
 				// remove animation to avoid waiting, show() with effect ignores 0
-				dropDownAnimationDuration: -1
+				dropDownAnimationDuration: -1,
+				  validatorOptions : {
+				    notificationOptions: {animationDuration: 0 }
+				  }
 			});
 			$editor.igNumericEditor("option", "readOnly", true);
 			$ddButton.click();
 			keyInteraction(40, $field); //down
+			$editor.clearQueue();
 			equal($editor.igNumericEditor("dropDownContainer").find(".ui-igedit-listitemactive").text(), listItems[0], "Arrow down with dropDownOnReadOnly did not select first item.");
-			keyInteraction(40, $field);
+			keyInteraction(40, $field);			
 			equal($editor.igNumericEditor("dropDownContainer").find(".ui-igedit-listitemactive").text(), listItems[1], "Arrow down with dropDownOnReadOnly did not select second item.");
 			keyInteraction(38, $field); //up
 			equal($editor.igNumericEditor("dropDownContainer").find(".ui-igedit-listitemactive").text(), listItems[0], "Arrow up with dropDownOnReadOnly did not select first item.");
